2006-05-01  Alexander Shopov  <ash@contact.bg>

	[BZ #2625]
	* iconvdata/Makefile (modules): Added MIK.
	(distribute): Added mik.c.
	(gen-8bit-gap-modules): Added mik.
	* iconvdata/TESTS: Added MIK.
	* iconvdata/gconv-modules: Added MIK.
	* iconvdata/tst-tables.sh: Added MIK.
	* iconvdata/mik.c: New file.
	* iconvdata/testdata/MIK: New file.
	* iconvdata/testdata/MIK..UTF8: New file.

2006-04-30  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Move state change
	notification...
	(lose): ...to here.

	* posix/Makefile (tests): Add tst-getaddrinfo3.
	* posix/tst-getaddrinfo3.c: New file.

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Add parenthesis in test
	for better readability.

	* nscd/nscd.h (struct database_dyn): Change filename to an array
	to avoid relocations.

	* elf/ldd.bash.in: If --verify loop fails to find a dynamic linker
	for the file don't just try the first one listed in RTLDLIST
	again.  We already have the status.

	* nis/nss_nisplus/nisplus-publickey.c (parse_grp_str): PIDLIST is
	supposed to have NGRPS elements.

	* nis/nss_nisplus/nisplus-parser.c: Minor optimizations and
	cleanups.  Avoid copying data if it can be used in the old place.

2006-04-29  Ulrich Drepper  <drepper@redhat.com>

	* nis/nss_nisplus/nisplus-ethers.c: Add missing null pointer check.
	* nis/nss_nisplus/nisplus-hosts.c: Likewise.
	* nis/nss_nisplus/nisplus-network.c: Likewise.
	* nis/nss_nisplus/nisplus-proto.c: Likewise.
	* nis/nss_nisplus/nisplus-rpc.c: Likewise.
	* nis/nss_nisplus/nisplus-service.c: Likewise.
	* nis/nss_nisplus/nisplus-spwd.c: Likewise.

	* nis/nisplus-parser.h (_nss_nisplus_parse_pwent): Add entry
	parameter.
	(_nss_nisplus_parse_pwent_chk): New prototype.
	* nis/nss_nisplus/nisplus-parser.c (_nss_nisplus_parse_pwent):
	Add entry parameter.  Use it for column value in all accesses.
	Move checks for well-formed reply to...
	(_nss_nisplus_parse_pwent_chk): ...here.  New function.